server/app/assets/stylesheets/shared/cards.scss
@import './colors.scss';
@import './text.scss';

.card-header {
  &.cards--header {
    height: 55px;
  }
}

.cards--default {
  padding: 2.5rem 90px;
  background-color: white;
  text-align: center;
  margin-inline: auto;
  border-radius: 10px;
  border: solid 1px $sidebar--main-container-border;
  box-shadow: 0 2px 8px -2px $cards--default-box-shadow;
}

@media (max-width: 768px) {
  .cards--default {
    width: 100%;
    padding: 2rem 1.5rem;
  }
}

.cards--card-with-header {
  width: 100%;
  height: 100%;
  background-color: white;
  border-radius: 6px;
  border: solid 1px $sidebar--main-container-border;
  box-shadow: 0 2px 8px -2px $cards--default-box-shadow;
  min-width: 275px;
}

@media (max-width: 768px) {
  .cards--card-with-header {
    min-width: 100%;
  }
}

.cards--card-header {
  width: 100%;
  padding: 1rem 1.5rem;
  border-bottom: solid 1px $sidebar--accounts-item-outline;
  text-align: left;

  span {
    font-size: 1rem;
    color: $deep-blue;
    font-variation-settings: 'wght' $bold;
  }
}

.cards--card-with-header-content-container {
  width: 100%;
  height: calc(100% - 59px);
  padding: 1rem 1.5rem 1.5rem;
}

.cards--info-row {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: flex-start;

  .forms--label,
  .cards--info-row-value {
    word-break: normal;
    text-overflow: clip;
    overflow-wrap: break-word;
    white-space: normal;
    width: 50%;
  }
}

.cards--info-row-full-width {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: flex-start;

  .forms--label {
    width: 20%;
  }

  .cards--info-row-value {
    width: 80%;
  }

  .forms--label,
  .cards--info-row-value {
    word-break: normal;
    text-overflow: clip;
    overflow-wrap: break-word;
    white-space: normal;
  }
}

@media (max-width: 1200px) {
  .cards--info-row {
    flex-direction: column;
    gap: .25rem;

    .forms--label,
    .cards--info-row-value {
      width: 100%;
    }
  }
}

@media (max-width: 768px) {
  .cards--info-row-full-width {
    flex-direction: column;
    gap: .25rem;

    .forms--label,
    .cards--info-row-value {
      width: 100%;
    }
  }
}

.cards--info-column {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: flex-start;
  justify-content: flex-start;
}

.cards--section-title {
  font-size: 0.938rem;
  font-variation-settings: 'wght' $bold;
  color: $deep-blue;
  line-height: 1.467;
  margin: 0;
}

.cards--section-container {
  padding: 1rem 1.5rem 1.5rem;
}

.cards--section-content-container {
  padding-top: 1rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: flex-start;
  justify-content: flex-start;
}

